@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2024 Echo Three, LLC
+// Copyright 2002-2025 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,17 +17,19 @@
 package com.echothree.control.user.period.server.command;
 
 import com.echothree.control.user.period.common.form.CreateFiscalYearForm;
+import com.echothree.control.user.period.common.result.PeriodResultFactory;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.period.server.logic.FiscalPeriodLogic;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
-import java.util.Arrays;
-import java.util.Collections;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import java.util.List;
 
 public class CreateFiscalYearCommand
@@ -37,13 +39,16 @@ public class CreateFiscalYearCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
-                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null)
-                )));
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.FiscalPeriod.name(), SecurityRoles.Create.name())
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("Year", FieldType.YEAR, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of CreateFiscalYearCommand */
@@ -53,11 +58,17 @@ public class CreateFiscalYearCommand
     
     @Override
     protected BaseResult execute() {
+        var result = PeriodResultFactory.getCreateFiscalYearResult();
         var year = Integer.valueOf(form.getYear());
         
-        FiscalPeriodLogic.getInstance().createFiscalYear(this, year, getPartyPK());
-        
-        return null;
+        var period = FiscalPeriodLogic.getInstance().createFiscalYear(this, year, getPartyPK());
+
+        if(period != null) {
+            result.setPeriodName(period.getLastDetail().getPeriodName());
+            result.setEntityRef(period.getPrimaryKey().getEntityRef());
+        }
+
+        return result;
     }
     
 }
